--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         }
     ],
     "require": {
-        "kantowatanabe/korelibrary": "1.7.0"
+        "kantowatanabe/korelibrary": "^1.8"
     }
 }
