--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Kanto Watanabe",
-            "email": "watanabe.kanto@gmail.com"
+            "homepage": "https://github.com/KantoWatanabe"
         }
     ],
     "require": {
