[Update] Refactor the example source

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "require": {
         "korephp/kore": "^2.4"
+    },
+    "scripts": {
+        "start": "php -S localhost:8080 -t public"
     }
 }
